--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "AbsoluteMac",
+  "name": "Bingo",
   "version": "0.0.1",
-  "description": "An application to help quote prices for customers at Absolute Mac",
+  "description": "A Bingo application built using AngularJS.",
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/stephenweigel/absolutemac"
+    "url": "https://github.com/stephenweigel/bingo"
   },
   "author": "Stephen Weigel",
   "devDependencies": {
